5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1789_1616.log
== TEST (2019-05-29 18:12:05) 
-- CODE:
# gelo= 2, fogo= 3, choque= 4, conjuracao= 8, ilusao= 10
from numpy impot*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))

-- ERROR:
File "XXXX", line 2
    from numpy impot*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:47) 
-- CODE:
from numpy impot*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))

-- ERROR:
File "XXXX", line 1
    from numpy impot*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:57) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))

-- ERROR:
File "XXXX", line 10
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:16) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
print(dano_do_mago)
-- ERROR:
File "XXXX", line 10
    print(dano_do_mago)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:20) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
print(dano_do_mago)
-- ERROR:
File "XXXX", line 10
    print(dano_do_mago)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:26) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))

-- ERROR:
File "XXXX", line 10
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:55:23) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
while(i > 0):
	print(magia[0] * nivel[0])
-- ERROR:
File "XXXX", line 10
    while(i > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:38) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
while():
	print(sum(magia[i] * nivel[i]))
	i = i + 1
-- ERROR:
File "XXXX", line 10
    while():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:46) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
while:
	print(sum(magia[i] * nivel[i]))
	i = i + 1
-- ERROR:
File "XXXX", line 10
    while:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:18:16) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
while(size(nagia) > 0):
	print(sum(magia[i] * nivel[i]))
	i = i + 1
-- ERROR:
File "XXXX", line 10
    while(size(nagia) > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:18:22) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
while(size(magia) > 0):
	print(sum(magia[i] * nivel[i]))
	i = i + 1
-- ERROR:
File "XXXX", line 10
    while(size(magia) > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:19:30) 
-- CODE:
from numpy import*
gelo = 2
fogo = 3
choque = 4
conjuracao = 8
ilusao = 10
i = 0
dano_do_mago = dano_da_magia * nivel_do_mago
magia = array(eval(input("Qual o tipo de magia? ").upper()))
nivel = array(eval(input("Qual o tipo de nivel? "))
while(size(magia) > i):
	print(sum(magia[i] * nivel[i]))
	i = i + 1
-- ERROR:
File "XXXX", line 11
    while(size(magia) > i):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
